Salesforce CPQ/main/default/objects/OptionConstraint__c/OptionConstraint__c.object-meta.xml
<CustomObject>
    <customHelpPage>OptionConstraintHelp</customHelpPage>
    <description>Product option constraint. Constraints govern which options must or must not be selected together.</description>
    <label>Option Constraint</label>
    <nameField>
        <label>Constraint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Option Constraints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>