Salesforce CPQ/main/default/objects/OptionConstraint__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Marks this constraint as active or inactive.</description>
    <inlineHelpText>Marks this constraint as active or inactive.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>