Salesforce CPQ/main/default/objects/OptionConstraint__c/fields/ConstrainingOption__c.field-meta.xml
<CustomField>
    <fullName>ConstrainingOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Option that&apos;s constraining another option.</description>
    <inlineHelpText>Choose an additional option if the Constrained Option is constraining another option.</inlineHelpText>
    <label>Constraining Option</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ConfiguredSKU__c</field>
            <operation>equals</operation>
            <valueField>ProductOption__c.ConfiguredSKU__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ProductOption__c</referenceTo>
    <relationshipLabel>Constraining</relationshipLabel>
    <relationshipName>Constraining</relationshipName>
    <type>Lookup</type>
</CustomField>